--- a/style.css
+++ b/style.css
@@ -2,17 +2,22 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Handlee", cursive;
+}
+
+.content {
+  min-width: 20%;
 }
 
 /* header */
 
 body {
   background: url("wall.webp") no-repeat center center/cover;
-  height: 2000px;
+  height: 100vh;
 }
 
 header {
-  z-index: 100;
+  z-index: 900;
   position: fixed;
   top: 0;
   width: 100%;
@@ -47,6 +52,7 @@ a {
 .nav-branding {
   font-size: 2rem;
   transition: 3s;
+  z-index: 5000;
 }
 
 .nav-link {
@@ -71,17 +77,18 @@ a {
 }
 
 .hamburger {
+  z-index: 9999;
   display: block;
 }
 
 .nav-menu {
   position: fixed;
-  right: -100%;
-  top: 70px;
+  top: -200px;
+  right: 0px;
   gap: 0;
   flex-direction: column;
   background-color: black;
-  width: 500px;
+  width: 300px;
   text-align: center;
   transition: 0.6s;
   opacity: 70%;
@@ -93,10 +100,10 @@ a {
 }
 
 .nav-menu.active {
-  right:0;
+  top: 60px;
 }
 
-/* trying to make logo change color */
+/*logo change color */
 .nav-branding.active {
   color: red;
   transition: 2.5s;
@@ -108,18 +115,48 @@ a {
 
 #prediction {
   margin-top: 200px;
+  position: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #deck {
   position: flex;
   cursor: pointer;
-  height: 175px;
-  width: 125px;
+  height: 40vh;
+  width: 30vh;
+  transition: 1s;
+  justify-content: space-between;
+  align-items: center;
+  animation-name: moving;
 }
 
 #cards img {
+  justify-content: space-between;
+  align-items: center;
+  top: 190px;
   cursor: pointer;
-  height: 175px;
-  width: 125px;
+  height: 40vh;
+  width: 30vh;
+  /* height: 350px;
+  width: 250px; */
   margin: 10px;
+  animation-name: moving;
+  transition: 1s;
+}
+
+@keyframes moving {
+  0% {
+    left: 0;
+  }
+  100% {
+    left: 200px;
+  }
+}
+
+@media (max-width: 768px) {
+  #cards img {
+    height: 20vh;
+    width: 15vh;
+  }
 }
