--- a/style.css
+++ b/style.css
@@ -163,9 +163,9 @@ a {
 /* after prediction */
 
 .text-after-prediction {
-  margin-top: 3.5rem;
+  margin-top: 3.5em;
   color: white;
-  font-size: 4rem;
+  font-size: 4em;
   display: flex;
   flex-direction: column;
   justify-content: center;
