--- a/style.css
+++ b/style.css
@@ -8,16 +8,28 @@
 /* header */
 
 body {
-  /* background: black !important; */
   background: url("space.jpg");
   background-size: cover no-repeat;
-
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
   color: white;
-  height: 100vh;
 }
 
+/* .content {
+  background: url("space.jpg");
+  background-size: cover no-repeat;
+} */
+
+/* .tarot {
+  background: url("space.jpg");
+  background-size: cover no-repeat;
+} */
+
 header {
-  margin-bottom: 0;
+  /* margin-bottom: 0; */
   z-index: 2;
   position: fixed;
   top: 0;
@@ -47,13 +59,15 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 60px;
+  /* gap: 60px; */
 }
 
 .nav-branding {
-  font-size: 2rem;
+  max-width: 90%;
+  font-size: 3rem;
   transition: 3s;
   z-index: 3;
+  white-space: nowrap;
 }
 
 .nav-link {
@@ -81,6 +95,7 @@ a {
 .confirm {
   display: flex;
   white-space: nowrap;
+  padding: 1rem;
 }
 
 .nav-menu {
@@ -116,8 +131,6 @@ a {
 }
 
 /* prediction place */
-/* 
-
 
 /* cards to slowly fade in */
 
@@ -152,8 +165,6 @@ a {
 }
 
 #deck {
-  /* margin-top: 1000px; */
-
   cursor: pointer;
   height: 40vh;
   width: 30vh;
@@ -180,7 +191,7 @@ a {
 .text-after-prediction {
   margin-top: 2rem;
   color: white;
-  font-size: 4rem;
+  font-size: 6vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -220,45 +231,47 @@ a {
 /* numerology */
 
 #numerology {
-  margin-top: 5rem;
-  padding-bottom: 2rem;
-  /* visibility: hidden; */
   display: none;
-  background: rgba(0, 0, 0, 0.379);
-  border-width: 2px;
-  border-style: solid;
-  border-color: rgba(255, 255, 255, 0.307);
 }
 
 .show {
-  /* visibility: visible !important; */
   display: block !important;
 }
 
-#numerology-table {
-    padding-top: 2rem;
-  width: 70%;
-  font-size: 2em;
-  color: white;
-  max-height: 20%;
-  margin: auto;
+.carousel-slide {
+  display: flex;
+  width: 100%;
+  /* height: 40vh; */
+  max-height: 40vh;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+
+.carousel-slide img {
+  position: relative;
+  max-width: 20vw;
 }
 
 .numerology-name-field {
-  /* padding: 4rem; */
+  padding-bottom: 1rem;
+  padding-top: 1rem;
   margin-bottom: 3rem;
   margin-top: 1.5em;
   display: grid;
-
   grid-template-columns: 50% 25% 25%;
   justify-items: center;
   align-items: center;
+  background: rgba(0, 0, 0, 0.247);
+  border-width: 2px;
+  border-style: solid;
+  border-color: rgba(255, 255, 255, 0.381);
   /* grid-template-columns: repeat(auto-fill, 100vh); */
 }
 
 .numerology-result {
   color: white;
-  font-size: 1.8rem;
+  font-size: 3vh;
 }
 
 #numerology-table-name {
@@ -271,14 +284,14 @@ a {
 }
 
 .big-number {
-  font-size: 1.4rem;
+  font-size: 2.9vh;
   color: #ffffff;
   text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #d9d9d9;
   text-align: center;
   font-weight: bold;
   border-radius: 100px;
   background: #ac2024;
-  padding: 3px 11px;
+  padding: 0.05rem 0.6rem;
 }
 
 #numerology-table-name td {
@@ -291,10 +304,17 @@ a {
   text-align: center;
 }
 
+.numerology-questions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 #numerology-question {
   margin-top: 10px;
   color: white;
-  font-size: 4rem;
+  font-size: 5vh;
   opacity: 0;
   display: flex;
   justify-content: center;
@@ -303,16 +323,18 @@ a {
 
 #text-after-question {
   color: white;
-  font-size: 2.5rem;
+  font-size: 4vh;
   opacity: 0;
-  margin-left: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 25px;
 }
 
 #btn-main {
   padding: 0.5rem;
   animation: painting-red 4s infinite ease;
-  font-size: 2.8rem;
+  font-size: 3.5vh;
 }
 
 /* colors */
@@ -335,6 +357,26 @@ a {
 
 .blue {
   background: rgb(66, 66, 165);
+}
+
+/* scrollbar */
+
+.carousel-slide::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+.carousel-slide::-webkit-scrollbar {
+  width: 0.5rem;
+  background-color: #f5f5f5;
+  height: 0.2rem;
+}
+
+.carousel-slide::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #48238d;
 }
 
 /* animations */
@@ -387,6 +429,10 @@ a {
   #cards img {
     height: 20vh;
     width: 15vh;
+  }
+
+  .nav-branding {
+    font-size: 2rem;
   }
 
   .content {
