--- a/style.css
+++ b/style.css
@@ -86,13 +86,19 @@ a {
 
 .confirm {
   display: flex;
-  /* white-space: nowrap; */
+
   padding: 1rem;
+}
+
+.confirm-end {
+  display: flex;
+
+  opacity: 0;
 }
 
 .nav-menu {
   position: fixed;
-top: 60px;
+  top: 60px;
   visibility: hidden;
 
   flex-direction: column;
@@ -190,7 +196,7 @@ top: 60px;
   opacity: 0;
 }
 
-#yes-tarot {
+.yes-btn {
   margin: 0 50px;
   min-width: 100px;
   font-family: inherit;
@@ -204,7 +210,7 @@ top: 60px;
   cursor: pointer;
 }
 
-#no-tarot {
+.no-btn {
   margin: 0 50px;
   min-width: 100px;
   font-family: inherit;
@@ -239,9 +245,14 @@ top: 60px;
   white-space: nowrap;
 }
 
-.carousel-slide img {
+/* .carousel-slide img {
+
+} */
+
+.img-supernatural {
   position: relative;
   width: 20vw;
+  height: 100%;
 }
 
 .numerology-name-field {
@@ -263,6 +274,10 @@ top: 60px;
 .numerology-result {
   color: white;
   font-size: 3vh;
+}
+
+#table-link {
+  cursor: pointer;
 }
 
 #numerology-table-name {
@@ -370,6 +385,18 @@ top: 60px;
   background-color: #48238d;
 }
 
+/* temporary */
+
+.container-temporary {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 1em;
+  margin-top: 3em;
+  font-size: 2em;
+}
+
 /* animations */
 
 .white {
@@ -445,7 +472,7 @@ top: 60px;
       font-size: 3vh;
     }
     .carousel-slide img {
-      width: 34vw;
+      width: 30vw;
     }
 
     .nav-menu {
