--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Handlee", cursive;
-}
-
-/* header */
-
 body {
   background: url("space.jpg");
   background-size: cover no-repeat;
@@ -18,9 +9,9 @@ body {
   color: white;
 }
 
-.content {
+/* .content {
   width: 100vw;
-}
+} */
 
 header {
   z-index: 2;
@@ -45,7 +36,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 24px;
+  /* padding: 0 24px; */
 }
 
 .nav-menu {
@@ -55,8 +46,9 @@ a {
 }
 
 .nav-branding {
+  margin-left: 0.3em;
   max-width: 90%;
-  font-size: 3rem;
+  font-size: 3em;
   transition: 3s;
   z-index: 3;
   white-space: nowrap;
@@ -74,7 +66,7 @@ a {
   display: block;
   width: 25px;
   height: 3px;
-  margin: 5px auto;
+  margin: 5px 20px 0 0;
   background-color: white;
 }
 
@@ -141,13 +133,17 @@ a {
   transition: 2s;
 }
 
-#push {
-  animation: painting-red 4s infinite ease;
+.greeting {
   margin: auto;
-  font-size: 2em;
+  font-size: 3vw;
   display: flex;
   text-align: center;
   justify-content: center;
+  flex-direction: column;
+}
+
+#push {
+  animation: painting-red 4s infinite ease;
 }
 
 #cards {
@@ -250,9 +246,9 @@ a {
 } */
 
 .img-supernatural {
-  position: relative;
-  width: 20vw;
-  height: 100%;
+  cursor: pointer;
+  width: 21vw;
+  height: 20vw;
 }
 
 .numerology-name-field {
@@ -346,7 +342,7 @@ a {
 /* colors */
 
 .red {
-  background: #b21c21;
+  background: #b21c1ccb;
 }
 
 .gold {
@@ -374,9 +370,8 @@ a {
 }
 
 .carousel-slide::-webkit-scrollbar {
-  width: 0.5rem;
   background-color: #f5f5f5;
-  height: 0.2rem;
+  height: 0.4em;
 }
 
 .carousel-slide::-webkit-scrollbar-thumb {
@@ -398,10 +393,20 @@ a {
 
 /* animations */
 
+.hide {
+  opacity: 0 !important;
+  transition: 0.2s;
+}
+
+.appear {
+  opacity: 100 !important;
+  transition: 0.1s;
+}
+
 .white {
   animation: fade-in 1s ease-in;
   animation-fill-mode: forwards;
-  animation-delay: 0.2s;
+  animation-delay: 0.3s;
 }
 
 .black {
@@ -433,7 +438,7 @@ a {
     color: white;
   }
   50% {
-    color: red;
+    color: rgba(47, 198, 67, 0.935);
   }
   100% {
     color: white;
@@ -448,6 +453,10 @@ a {
     width: 10rem;
   }
 
+  .greeting {
+    font-size: 4vw;
+  }
+
   .nav-branding {
     font-size: 2rem;
   }
@@ -457,13 +466,12 @@ a {
     text-align: center;
     justify-content: center;
     flex-direction: column;
-    margin-top: -10em;
     font-size: 2em;
   }
 
-  .content {
+  /* .content {
     height: 90vh;
-  }
+  } */
 
   .numerology-name-field {
     flex-direction: column;
@@ -474,6 +482,10 @@ a {
       height: 8rem;
       width: 6rem;
       margin: 0.75rem;
+    }
+
+    .greeting {
+      font-size: 5vw;
     }
 
     .nav-branding {
@@ -500,5 +512,59 @@ a {
     width: 6rem;
     margin: 0.55rem;
   }
+}
+
+/* accordion */
+
+.accordion {
+  /* position: center; */
+  padding: 7em;
+  border-radius: 2emx;
+  /* height: 100vh; */
+  text-align: center;
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+}
+
+.accordion .accordion-title {
+  /* margin-bottom: 30px; */
+  text-align: center;
+}
+
+.accordion .content-container .question {
+  padding: 1em 0px;
+  font-size: 22px;
+  cursor: pointer;
+  border-bottom: 1px solid black;
+  /* what does it mean? position relative, absolute */
+  position: relative;
+}
+
+.accordion .content-container .question::after {
+  content: "+";
+
+  position: absolute;
+  right: -5px;
+}
+
+.accordion .content-container .answer {
+  padding-top: 15px;
+  font-size: 22px;
+  line-height: 1.5;
+  width: 100%;
+
+  height: 0px;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+/* .accordion .content-container.active .question {
+  font-size: 18px;
+  transition: 0.5s;
+} */
+
+.accordion .content-container.active .answer {
+  height: 150px;
 }
 
