--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Handlee", cursive;
+}
+
+/* header */
+
 body {
   background: url("space.jpg");
   background-size: cover no-repeat;
@@ -90,7 +99,7 @@ a {
 
 .nav-menu {
   position: fixed;
-  top: 60px;
+  top: 3.2em;
   visibility: hidden;
 
   flex-direction: column;
@@ -469,9 +478,9 @@ a {
     font-size: 2em;
   }
 
-  /* .content {
+  .content {
     height: 90vh;
-  } */
+  }
 
   .numerology-name-field {
     flex-direction: column;
@@ -485,7 +494,7 @@ a {
     }
 
     .greeting {
-      font-size: 5vw;
+      font-size: 6vw;
     }
 
     .nav-branding {
@@ -567,4 +576,3 @@ a {
 .accordion .content-container.active .answer {
   height: 150px;
 }
-
