--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ a {
   display: flex;
   width: 100%;
   /* height: 40vh; */
-  max-height: 40vh;
+  max-height: 40em;
   overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
@@ -255,8 +255,8 @@ a {
 
 .img-supernatural {
   cursor: pointer;
-  width: 21vw;
-  height: 20vw;
+  width: 25em;
+  height: 25em;
 }
 
 .numerology-name-field {
@@ -575,3 +575,4 @@ a {
 .accordion .content-container.active .answer {
   height: 150px;
 }
+
