--- a/style.css
+++ b/style.css
@@ -244,8 +244,8 @@ a {
   width: 100%;
   /* height: 40vh; */
   max-height: 26em;
-  /* overflow-x: auto; */
-  /* overflow-y: hidden; */
+  overflow-x: auto;
+  overflow-y: hidden;
   white-space: nowrap;
 }
 
@@ -462,8 +462,8 @@ a {
   }
 
   .carousel-slide img {
-    height: 15em;
     width: 15em;
+    height: 15em;
   }
 
   .greeting {
@@ -505,8 +505,8 @@ a {
       font-size: 2.6vh;
     }
     .carousel-slide img {
-      height: 10em;
       width: 10em;
+      height: 10em;
     }
 
     .nav-menu {
